--- a/src/main/resources/templates/cancel.html
+++ b/src/main/resources/templates/cancel.html
@@ -12,7 +12,7 @@
     <h1><i class="las la-check-circle"></i></h1>
     <h1>Error!</h1>
     <p>Your order was not successful.</p>
-    <p>Please check your wallet ! </p>
+    <p>Please check your wallet and buy again! </p>
 </div>
 </body>
 </html>
