--- a/src/main/resources/templates/updateProductUser.html
+++ b/src/main/resources/templates/updateProductUser.html
@@ -49,14 +49,14 @@
                                     <textarea id="description" rows="5" cols="126%" th:field="${productDto.description}" name="description"></textarea>
                                 </div>
                             </div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <div class="custom-file">
-                                        <input type="file"  class="custom-file-input" id="filename" name="files"
-                                               accept="image/jpeg,image/png,image/jpg" multiple="multiple" >
-                                        <label class="custom-file-label" for="filename">Choose file</label>
-                                    </div>
-                                </div>
+<!--                            <div class="col-md-12">-->
+<!--                                <div class="form-group">-->
+<!--                                    <div class="custom-file">-->
+<!--                                        <input type="file"  class="custom-file-input" id="filename" name="files"-->
+<!--                                               accept="image/jpeg,image/png,image/jpg" multiple="multiple" >-->
+<!--                                        <label class="custom-file-label" for="filename">Choose file</label>-->
+<!--                                    </div>-->
+<!--                                </div>-->
 
                                 <div class="col-md-12">
                                     <div class="form-group">
