--- a/src/main/resources/templates/cancel.html
+++ b/src/main/resources/templates/cancel.html
@@ -9,7 +9,7 @@
 
 <body>
 <div layout:fragment="content" class="text-center done" >
-    <h1><i class="las la-check-circle"></i></h1>
+    <h1><i class="las la-times-circle"></i></h1>
     <h1>Error!</h1>
     <p>Your order was not successful.</p>
     <p>Please check your wallet and buy again! </p>
