--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
             <div class="col-lg-8 col-xl-6">
                 <div class="banner banner-overlay banner-lg  content-left">
                     <a th:href="@{/productdetail(id=${banner[0].productid})}">
-                        <img th:src="@{${'/images/upload/banner' + banner[0].img}} ">
+                        <img th:src="@{${'/images/upload/banner/' + banner[0].img}} ">
                     </a>
                     <div class="banner-content">
                         <h4 class="banner-subtitle">New Release</h4>
@@ -37,7 +37,7 @@
             <div class="col-sm-6 col-lg-4 col-xl-3">
                 <div class="banner banner-overlay banner-sm content-right">
                     <a th:href="@{/productdetail(id=${banner[1].productid})}">
-                        <img th:src="@{${'/images/upload/banner' + banner[1].img}} ">
+                        <img th:src="@{${'/images/upload/banner/' + banner[1].img}} ">
                     </a>
                     <div class="banner-content text-right">
                         <h4 class="banner-subtitle">Weekend Offer</h4>
@@ -48,7 +48,7 @@
 
                 <div class="banner banner-overlay d-none d-lg-block banner-sm content-right align-center">
                     <a th:href="@{/productdetail(id=${banner[2].productid})}">
-                        <img th:src="@{${'/images/upload/banner' + banner[2].img}} ">
+                        <img th:src="@{${'/images/upload/banner/' + banner[2].img}} ">
                     </a>
                     <div class="banner-content text-right">
                         <p th:text="${banner[2].product.name}" class="mb-1"></p>
@@ -61,7 +61,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="banner banner-overlay banner-sm content-right align-center">
                     <a th:href="@{/productdetail(id=${banner[3].productid})}">
-                        <img th:src="@{${'/images/upload/banner' + banner[3].img}} ">
+                        <img th:src="@{${'/images/upload/banner/' + banner[3].img}} ">
                     </a>
                     <div class="banner-content" th:style="|left: auto; right: 3rem; align-items: flex-start;|">
                         <h4 class="banner-subtitle">Weekend Sale</h4>
@@ -75,7 +75,7 @@
             <div class="col-lg-9">
                 <div class="banner banner-overlay banner-lg">
                     <a th:href="@{/productdetail(id=${banner[4].productid})}">
-                        <img th:src="@{${'/images/upload/banner' + banner[4].img}} ">
+                        <img th:src="@{${'/images/upload/banner/' + banner[4].img}} ">
                     </a>
                     <div class="banner-content">
                         <h4 class="banner-subtitle">Amazing Value</h4>
