--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -41,7 +41,7 @@
                                 <ul class="widget-list">
                                     <li><a href="/login">Sign In</a></li>
                                     <li><a href="/cart">View Cart</a></li>
-                                    <li><a href="/listorder">Track My Order</a></li>
+                                    <li><a href="/listorder" th:if="${#authorization.expression('hasAuthority(''USER'')')}">Track My Order</a></li>
                                 </ul><!-- End .widget-list -->
                             </div><!-- End .widget -->
                         </div><!-- End .col-sm-6 col-lg-3 -->
