--- a/src/main/resources/templates/AdminIndex.html
+++ b/src/main/resources/templates/AdminIndex.html
@@ -325,6 +325,9 @@
 
                                 </tbody>
                             </table>
+                            <div class="heading-right" style="text-align: right" >
+                                <a href="/productall" class="title-link">View all users <i class="las la-arrow-right"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
