--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -143,85 +143,14 @@
                         </div>
                     </div>
                 </div>
-
-                <h2 class="title text-center mb-3">Payments</h2>
-                <div class="accordion accordion-rounded" id="accordion-3">
-                    <div class="card card-box card-sm bg-light">
-                        <div class="card-header" id="heading3-1">
-                            <h2 class="card-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" href="#collapse3-1" aria-expanded="false" aria-controls="collapse3-1">
-                                    What payment types can I use?
-                                </a>
-                            </h2>
-                        </div><!-- End .card-header -->
-                        <div id="collapse3-1" class="collapse" aria-labelledby="heading3-1" data-parent="#accordion-3">
-                            <div class="card-body">
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card card-box card-sm bg-light">
-                        <div class="card-header" id="heading3-2">
-                            <h2 class="card-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" href="#collapse3-2" aria-expanded="false" aria-controls="collapse3-2">
-                                    Can I pay by Gift Card?
-                                </a>
-                            </h2>
-                        </div>
-                        <div id="collapse3-2" class="collapse" aria-labelledby="heading3-2" data-parent="#accordion-3">
-                            <div class="card-body">
-                                Ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card card-box card-sm bg-light">
-                        <div class="card-header" id="heading3-3">
-                            <h2 class="card-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" href="#collapse3-3" aria-expanded="false" aria-controls="collapse3-3">
-                                    I can't make a payment
-                                </a>
-                            </h2>
-                        </div>
-                        <div id="collapse3-3" class="collapse" aria-labelledby="heading3-3" data-parent="#accordion-3">
-                            <div class="card-body">
-                                Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card card-box card-sm bg-light">
-                        <div class="card-header" id="heading3-4">
-                            <h2 class="card-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" href="#collapse3-4" aria-expanded="false" aria-controls="collapse3-4">
-                                    Has my payment gone through?
-                                </a>
-                            </h2>
-                        </div><!-- End .card-header -->
-                        <div id="collapse3-4" class="collapse" aria-labelledby="heading3-4" data-parent="#accordion-3">
-                            <div class="card-body">
-                                Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum.Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros.
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
 
-        <div class="cta cta-display bg-image pt-4 pb-4" style="background-image: url(static/images/index/banners/banner-1-title.png);">
+        <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
             <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-10 col-lg-9 col-xl-7">
-                        <div class="row no-gutters flex-column text-center">
-                            <div class="col">
-                                <h3 class="cta-title text-white">Contact us for support</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <h3 class="page-title">Contact for us</span></h3>
             </div>
-        </div>
-    </main>
+        </div>    </main>
 
     <main class="main">
         <nav aria-label="breadcrumb" class="breadcrumb-nav border-0 mb-0" style="margin-top: 15px">
