--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -156,7 +156,7 @@
                                         <a href="/about" >About Us</a>
                                     </li>
                                     <li>
-                                        <a href="#">Support</a>
+                                        <a href="/help">Support</a>
                                     </li>
                                 </ul><!-- End .menu -->
                             </nav><!-- End .main-nav -->
