--- a/src/main/resources/templates/productall.html
+++ b/src/main/resources/templates/productall.html
@@ -82,6 +82,7 @@
                                 <table class="table">
                                     <thead class=" text-primary">
                                     <th scope="col">ID</th>
+                                    <th scope="col">Seller</th>
                                     <th scope="col">Name</th>
                                     <th scope="col">Image</th>
                                     <th scope="col">Price</th>
@@ -93,6 +94,8 @@
                                     <tbody>
                                     <tr th:each="product : ${products}">
                                         <th scope="row" th:text="${product.productid}"></th>
+                                        <td><a th:href="@{/selleruser(username=${product.user.username})}"
+                                               th:text="${product.user.username}"></a> </td>
                                         <td th:text="${product.name}"></td>
                                         <td > <img th:src="@{${'/images/upload/' + product.images[0].name}}"height="50px"width="50px"></td>
                                         <td th:text="${product.price}"></td>
@@ -106,7 +109,7 @@
                                 <nav aria-label="Page navigation">
                                     <ul class="pagination">
                                         <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
-                                            <a class="page-link" th:href="@{/listproduct(size=${size}, page=${t})}" th:text="${t+1}"></a>
+                                            <a class="page-link" th:href="@{/productall(size=${size}, page=${t})}" th:text="${t+1}"></a>
                                         </li>
                                     </ul>
                                 </nav>
