--- a/src/main/resources/templates/LoginPage.html
+++ b/src/main/resources/templates/LoginPage.html
@@ -19,7 +19,7 @@
     </nav><!-- End .breadcrumb-nav -->
 
     <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17"
-         style=" 'background-image: url(images/bg-log.jpg) no-repeat center center fixed;' ">
+         th:style=" 'background-image: url(images/bg-log.jpg)' ">
         <div class="container">
             <div class="form-box">
                 <div class="form-tab">
@@ -103,13 +103,6 @@
                                         <span>SIGN UP</span>
                                         <i class="las la-arrow-right"></i>
                                     </button>
-
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="register-policy-2"
-                                               required>
-                                        <label class="custom-control-label" for="register-policy-2">I agree to the <a
-                                                href="#">privacy policy</a> *</label>
-                                    </div><!-- End .custom-checkbox -->
                                 </div><!-- End .form-footer -->
                             </form>
                         </div><!-- .End .tab-pane -->
