--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -11,7 +11,7 @@
     <div class="wrap-container">
         <main class="main">
             <div class="container">
-                <div class="page-header page-header-big text-center" style="background-image: url('images/about-header-bg.jpg')">
+                <div class="page-header page-header-big text-center" th:style="'background-image: url(images/header-about.jpg)'">
                     <h1 class="page-title text-white">About us<span class="text-white">Who we are</span></h1>
                 </div><!-- End .page-header -->
             </div><!-- End .container -->
@@ -138,13 +138,7 @@
 
                                     <figcaption class="member-overlay">
                                         <div class="member-overlay-content">
-                                            <h3 class="member-title">Samanta Grey<span>Founder & CEO</span></h3><!-- End .member-title -->
-                                            <p>Sed pretium, ligula sollicitudin viverra, tortor libero sodales leo, eget blandit nunc.</p>
-                                            <div class="social-icons social-icons-simple">
-                                                <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
-                                                <a href="#" class="social-icon" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
-                                                <a href="#" class="social-icon" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
-                                            </div>
+                                            <h1 class="member-title">Samanta Grey<span>Founder & CEO</span></h1><!-- End .member-title -->
                                         </div>
                                     </figcaption>
                                 </figure>
@@ -161,13 +155,7 @@
 
                                     <figcaption class="member-overlay">
                                         <div class="member-overlay-content">
-                                            <h3 class="member-title">Bruce Sutton<span>Sales & Marketing Manager</span></h3><!-- End .member-title -->
-                                            <p>Sed pretium, ligula sollicitudin viverra, tortor libero sodales leo, eget blandit nunc.</p>
-                                            <div class="social-icons social-icons-simple">
-                                                <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
-                                                <a href="#" class="social-icon" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
-                                                <a href="#" class="social-icon" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
-                                            </div>
+                                            <h1 class="member-title">Bruce Sutton<span>Sales & Marketing Manager</span></h1><!-- End .member-title -->
                                         </div>
                                     </figcaption>
                                 </figure>
@@ -184,13 +172,7 @@
 
                                     <figcaption class="member-overlay">
                                         <div class="member-overlay-content">
-                                            <h3 class="member-title">Janet Joy<span>Product Manager</span></h3><!-- End .member-title -->
-                                            <p>Sed pretium, ligula sollicitudin viverra, tortor libero sodales leo, eget blandit nunc.</p>
-                                            <div class="social-icons social-icons-simple">
-                                                <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
-                                                <a href="#" class="social-icon" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
-                                                <a href="#" class="social-icon" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
-                                            </div>
+                                            <h1 class="member-title">Janet Joy<span>Product Manager</span></h1><!-- End .member-title -->
                                         </div>
                                     </figcaption>
                                 </figure>
@@ -198,45 +180,6 @@
                                     <h3 class="member-title">Janet Joy<span>Product Manager</span></h3><!-- End .member-title -->
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="mb-2"></div>
-
-                <div class="about-testimonials bg-light-2 pt-6 pb-6">
-                    <div class="container">
-                        <h2 class="title text-center mb-3">What Customer Say About Us</h2><!-- End .title text-center -->
-
-                        <div class="owl-carousel owl-simple owl-testimonials-photo" data-toggle="owl"
-                             data-owl-options='{
-                                "nav": false,
-                                "dots": true,
-                                "margin": 20,
-                                "loop": false,
-                                "responsive": {
-                                    "1200": {
-                                        "nav": true
-                                    }
-                                }
-                            }'>
-                            <blockquote class="testimonial text-center">
-                                <img src="images/testimonials/user-1.jpg" alt="user">
-                                <p>“ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque aliquet nibh nec urna. <br>In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. ”</p>
-                                <cite>
-                                    Jenson Gregory
-                                    <span>Customer</span>
-                                </cite>
-                            </blockquote>
-
-                            <blockquote class="testimonial text-center">
-                                <img src="images/testimonials/user-2.jpg" alt="user">
-                                <p>“ Impedit, ratione sequi, sunt incidunt magnam et. Delectus obcaecati optio eius error libero perferendis nesciunt atque dolores magni recusandae! Doloremque quidem error eum quis similique doloribus natus qui ut ipsum.Velit quos ipsa exercitationem, vel unde obcaecati impedit eveniet non. ”</p>
-                                <cite>
-                                    Victoria Ventura
-                                    <span>Customer</span>
-                                </cite>
-                            </blockquote>
                         </div>
                     </div>
                 </div>
