--- a/src/main/resources/templates/cancel.html
+++ b/src/main/resources/templates/cancel.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layout/template.html}">
 <head>
     <meta charset="UTF-8">
-    <title>Thank You</title>
+    <title>Error</title>
 </head>
 
 <body>
